@startumlclassDiagram

             class Main {
                 <<Client>>
                 +main(args: String[])$ void
             }

             class EmergencyPowerSystem {
                 <<Orchestrator>>
                 -banks : List~BatteryBank~
                 -EmergencyPowerSystem(banks: List~BatteryBank~)
                 +from(rawNotes: String)$ EmergencyPowerSystem
                 +calculateTotalOutputJoltage(targetBatteries: int) long
                 -parseBanks(notes: String)$ List~BatteryBank~
             }

             class BatteryBank {
                 <<Domain Entity>>
                 -sequence : String
                 +BatteryBank(sequence: String)
                 +calculateMaxJoltage(targetBatteries: int) long
                 -recursiveExtract(left: int, start: int, acc: String) String
                 -continueExtraction(left: int, start: int, acc: String) String
                 -findMaxDigitIndex(start: int, end: int) int
                 -keepMaxIndex(best: int, current: int) int
             }

             Main ..> EmergencyPowerSystem : usa
             EmergencyPowerSystem *-- BatteryBank : compone (1..N)
@enduml